fix(display): Remove vertical Scrollbar #22

--- a/assets/stylesheets/01-structure.scss
+++ b/assets/stylesheets/01-structure.scss
@@ -2,7 +2,7 @@ body {
     font-family: 'Lato', sans-serif;
     background-color: $gray-800;
     >div>* {
-        min-height: calc(100vh - #{$header-height});
+        min-height: calc(100vh - #{$header-height + 4});
     }
 }
 
